 - obspy.io.quakeml:
   * Allow writing invalid ids but raise a warning
     (see #2104, #2090, #2093, #1872).
   * Skip invalid enumeration values during reading but raise a warning.
     (see #2106, #2098, #2095)
 - obspy.io.sac:
   * Fix bug writing inventory with SOH channels to SACPZ (see #2200).
 - obspy.io.seiscomp:
   * Adding support for SC3ML 0.10 (see #2004, #2024 and #2124).
   * Update xsl to allow conversion of amplitude picks not associated with
     origins (see #2273).
 - obspy.io.sh:
   * Add read support for SeismicHandler EVT event files (see #2109)
 - obspy.io.shapefile:
   * Add possibility to add custom database columns when writing catalog
     objects to shapefile (see #2012)
 - obspy.io
    * added read support for receiver gather format v. 1.6 (see #2070)
 - obspy.signal.trigger:
    * fix a bug in AR picker (see #2157)
 - obspy.signal.PPSD:
   * Fixed exact trace cutting for PSD segments (see #2040).
   * Timestamp representations internally and in npz I/O were changed to use
     integer nanosecond POSIX timestamps to avoid any potential floating point
     inaccuracies and since this is also what UTCDateTime is based on nowadays
     (see #2045)
   * Fixed the check for new PSD slices whether they should be added or whether
     they would add unwanted duplicated data (see #2229)
 - obspy.signal.cross_correlation:
   * Add new `correlate_template()` function with 'full' normalization option,
     required for correlations in template-matching
     (see #2035 and #2042).
   * 'domain' parameter in correlate function is deprecated in favour of new
     'method' parameter to be consistent with recent SciPy versions
     (see #2042).

1.1.1rc1.post0:
 - General:
   * Tests pass with numpy 1.14 (see #2044).
 - obspy.core:
   * UTCDateTime now raises a meaningful exceptions when passing
     invalid or out-of-bounds 'julday' during initialization (see #1988)
   * Fix pickling of traces with a sampling rate of 0 (see #1990)