@@ -20,28 +20,25 @@ from future.builtins import *  # NOQA
 import math
 import re
 import warnings
+import obspy
 
-import numpy as np
 from lxml import etree
 from scipy.signal import tf2zpk
-
-import obspy
 from obspy.core.util.obspy_types import (ComplexWithUncertainties,
                                          FloatWithUncertaintiesAndUnit)
 from obspy.core.inventory import (Azimuth, ClockDrift, Dip,
                                   Distance, Frequency, Latitude,
                                   Longitude, SampleRate)
-from obspy.core.inventory.response import (
-    CoefficientsTypeResponseStage, FilterCoefficient, FIRResponseStage,
-    PolesZerosResponseStage, PolynomialResponseStage, ResponseListElement,
-    ResponseListResponseStage)
+from obspy.core.inventory import (CoefficientsTypeResponseStage,
+                                  FilterCoefficient, FIRResponseStage,
+                                  PolesZerosResponseStage,
+                                  PolynomialResponseStage)
 from obspy.io.stationxml.core import _read_floattype
 
 
 SOFTWARE_MODULE = "ObsPy %s" % obspy.__version__
 SOFTWARE_URI = "http://www.obspy.org"
-SCHEMA_VERSION = ['0.5', '0.6', '0.7', '0.8', '0.9', '0.10']
-
+SCHEMA_VERSION = ["0.5", "0.6", "0.7", "0.8", "0.9", "0.10", "0.11"]
 
 def _count_complex(complex_string):
     """
@@ -75,7 +72,6 @@ def _parse_list_of_complex_string(complex_string):
         raise ValueError(msg)
     return numbers
 
-
 def _read_sc3ml(path_or_file_object):
     """
     Function for reading a stationXML file.
@@ -84,7 +80,7 @@ def _read_sc3ml(path_or_file_object):
     """
     root = etree.parse(path_or_file_object).getroot()
 
-    # Code can be used for version 0.5 - 0.10
+    # Code can be used for version 0.7, 0.8, 0.9, and 0.10
     basespace = "http://geofon.gfz-potsdam.de/ns/seiscomp3-schema"
     for version in SCHEMA_VERSION:
         namespace = "%s/%s" % (basespace, version)
@@ -113,11 +109,63 @@ def _read_sc3ml(path_or_file_object):
     module = None
     module_uri = None
 
+    # Find the inventory root element. (Only finds the first. We expect only
+    # one, so any more than that will be ignored.)
+    # that will be ignored.)
+    inv_element = root.find(_ns("Inventory"))
+    
+    # Pre-generate a dictionary of the sensors, dataloggers and responses to
+    # avoid costly linear search when parsing network nodes later
+    # search when parsing network nodes later.
+    # Register sensors
+    sensors = {}
+    for sensor_element in inv_element.findall(_ns("sensor")):
+        public_id = sensor_element.get("publicID")
+        if public_id:
+            if public_id in sensors:
+                msg = ("Found multiple matching sensor tags with the same "
+	               "publicID '{}'.".format(public_id))
+                raise obspy.ObsPyException(msg)
+            else:
+                sensors[public_id] = sensor_element
+    # Register dataloggers
+    dataloggers = {}
+    for datalogger_element in inv_element.findall(_ns("datalogger")):
+        public_id = datalogger_element.get("publicID")
+        if public_id:
+            if public_id in dataloggers:
+                msg = ("Found multiple matching datalogger tags with the same "
+	               "publicID '{}'.".format(public_id))
+                raise obspy.ObsPyException(msg)
+            else:
+                dataloggers[public_id] = datalogger_element
+    # Register reponses
+    responses = {}
+
+    # Go over all responses
+    for response_type in ["responseFIR", "responsePAZ", "responseIIR", "responsePolynomial"]: 
+        for response_element in inv_element.findall(_ns(response_type)):
+            public_id = response_element.get("publicID")
+            if public_id:
+                if public_id in responses:
+                    msg = ("Found multiple matching {} tags with the same "
+                           "publicID '{}'.".format(response_type, public_id))
+                    raise obspy.ObsPyException(msg)
+                else:
+                    responses[public_id] = response_element
+    # Organize all the collection instrument information into a unified
+    # intrumentation register.
+    instrumentation_register = {
+        "sensors": sensors,
+        "dataloggers": dataloggers,
+        "responses": responses
+    }
+	
     # Collect all networks from the sc3ml inventory
     networks = []
-    inv_element = root.find(_ns("Inventory"))
     for net_element in inv_element.findall(_ns("network")):
-        networks.append(_read_network(inv_element, net_element, _ns))
+        networks.append(_read_network(instrumentation_register,
+                                      net_element, _ns))
 
     return obspy.core.inventory.Inventory(networks=networks, source=source,
                                           sender=sender, created=created,
@@ -143,12 +191,12 @@ def _tag2obj(element, tag, convert):
         None
 
 
-def _read_network(inventory_root, net_element, _ns):
+def _read_network(instrumentation_register, net_element, _ns):
 
     """
     Reads the network structure
 
-    :param inventory_root: base inventory element of sc3ml
+    :param instrumentation_register: register of instrumentation metadata
     :param net_element: network element to be read
     :param _ns: namespace
     """
@@ -170,7 +218,8 @@ def _read_network(inventory_root, net_element, _ns):
     # Collect the stations
     stations = []
     for sta_element in net_element.findall(_ns("station")):
-        stations.append(_read_station(inventory_root, sta_element, _ns))
+        stations.append(_read_station(instrumentation_register,
+                                      sta_element, _ns))
     network.stations = stations
 
     return network
@@ -191,12 +240,12 @@ def _get_restricted_status(element, _ns):
         return 'closed'
 
 
-def _read_station(inventory_root, sta_element, _ns):
+def _read_station(instrumentation_register, sta_element, _ns):
 
     """
     Reads the station structure
 
-    :param inventory_root: base inventory element of sc3ml
+    :param instrumentation_register: register of instrumentation metadata 
     :param sta_element: station element to be read
     :param _ns: name space
     """
@@ -233,7 +282,8 @@ def _read_station(inventory_root, sta_element, _ns):
     channels = []
     for sen_loc_element in sta_element.findall(_ns("sensorLocation")):
         for channel in sen_loc_element.findall(_ns("stream")):
-            channels.append(_read_channel(inventory_root, channel, _ns))
+            channels.append(_read_channel(instrumentation_register,
+                                          channel, _ns))
 
     station.channels = channels
 
@@ -316,12 +366,13 @@ def _read_sensor(equip_element, _ns):
         removal_date=None, calibration_dates=None)
 
 
-def _read_channel(inventory_root, cha_element, _ns):
+def _read_channel(instrumentation_register, cha_element, _ns):
 
     """
     reads channel element from sc3ml format
 
-    :param sta_element: channel element
+    :param instrumentation_register: register of instrumentation metadata
+    :param cha_element: channel element
     :param _ns: namespace
     """
 
@@ -366,34 +417,32 @@ def _read_channel(inventory_root, cha_element, _ns):
     # obtain the sensorID and link to particular publicID <sensor> element
     # in the inventory base node
     sensor_id = cha_element.get("sensor")
-    if sensor_id is None:
-        sensor_element = None
-    else:
-        sensor_element = inventory_root.find(_ns("*[@publicID='" + sensor_id +
-                                                 "']"))
+    sensor_element = instrumentation_register["sensors"].get(sensor_id)
+
     # obtain the poles and zeros responseID and link to particular
     # <responsePAZ> publicID element in the inventory base node
-    response_element = None
     if (sensor_element is not None and
        sensor_element.get("response") is not None):
+
         response_id = sensor_element.get("response")
         if response_id is not None:
-            # Generic search for publicID
-            search = "*[@publicID='" + response_id + "']"
-            response_element = inventory_root.find(_ns(search))
-            if response_element is None:
-                msg = ("Could not find matching response element for "
-                       "'{}'.".format(response_id))
-                raise obspy.ObsPyException(msg)
+            # Change in v0.10 the way identifiers are delimited (# -> /)
+            if len(response_id.split("#")) == 1:
+                resp_type = response_id.split("/")[0]
+            else:
+                resp_type = response_id.split("#")[0]
+            response_element = instrumentation_register["responses"]\
+                               .get(response_id)
+        else:
+            response_element = None
+    else:
+        response_element = None
 
     # obtain the dataloggerID and link to particular <responsePAZ> publicID
     # element in the inventory base node
     datalogger_id = cha_element.get("datalogger")
-    if datalogger_id is None:
-        data_log_element = None
-    else:
-        search = "*[@publicID='" + datalogger_id + "']"
-        data_log_element = inventory_root.find(_ns(search))
+    data_log_element = \
+        instrumentation_register["dataloggers"].get(datalogger_id)
 
     channel.restricted_status = _get_restricted_status(cha_element, _ns)
 
@@ -408,8 +457,7 @@ def _read_channel(inventory_root, cha_element, _ns):
     denominator = _tag2obj(cha_element, _ns("sampleRateDenominator"), int)
 
     # If numerator is zero, set rate to zero irrespective of the denominator.
-    # If numerator is non-zero and denominator zero, will raise
-    # ZeroDivisionError.
+    # If numerator is non-zero and denominator zero, will raise ZeroDivisionError.
     rate = numerator / denominator if numerator != 0 else 0
 
     channel.sample_rate_ratio_number_samples = numerator
@@ -459,7 +507,8 @@ def _read_channel(inventory_root, cha_element, _ns):
         if digital_filter_chain is not None:
             response_dig_id = digital_filter_chain.split(" ")
 
-    channel.response = _read_response(inventory_root, sensor_element,
+    channel.response = _read_response(instrumentation_register,
+                                      sensor_element,
                                       response_element, cha_element,
                                       data_log_element, _ns,
                                       channel.sample_rate,
@@ -494,13 +543,12 @@ def _read_instrument_sensitivity(sen_element, cha_element, _ns):
     return sensitivity
 
 
-def _read_response(root, sen_element, resp_element, cha_element,
+def _read_response(instrumentation_register, sen_element, resp_element, cha_element,
                    data_log_element, _ns, samp_rate, fir, analogue):
     """
     reads response from sc3ml format
 
-    :param
-    :param _ns: namespace
+    :param instrumentation_register: register of instrumentation metadata
     """
     response = obspy.core.inventory.response.Response()
     response.instrument_sensitivity = _read_instrument_sensitivity(
@@ -535,9 +583,7 @@ def _read_response(root, sen_element, resp_element, cha_element,
             # get the particular stage decimation factor
             # multiply the decimated sample rate by this factor
             # These may be FIR, IIR or PAZ
-            # Change in v010: use generic finding of publicID
-            search = "*[@publicID='" + fir_id + "']"
-            fir_element = root.find(_ns(search))
+            fir_element = instrumentation_register["responses"].get(fir_id)
             if fir_element is None:
                 continue
             dec_fac = _tag2obj(fir_element, _ns("decimationFactor"), int)
@@ -576,8 +622,7 @@ def _read_response(root, sen_element, resp_element, cha_element,
     # Output unit: V
     if len(analogue):
         for analogue_id in analogue:
-            search = "*[@publicID='" + analogue_id + "']"
-            analogue_element = root.find(_ns(search))
+            analogue_element = instrumentation_register["responses"].get(analogue_id)
             if analogue_element is None:
                 msg = ('Analogue responsePAZ not in inventory:'
                        '%s, stopping before stage %i') % (analogue_id, stage)
@@ -605,8 +650,7 @@ def _read_response(root, sen_element, resp_element, cha_element,
     # Input unit: COUNTS
     # Output unit: COUNTS
     for fir_id, rate in zip(fir, fir_stage_rates):
-        search = "*[@publicID='" + fir_id + "']"
-        stage_element = root.find(_ns(search))
+        stage_element = instrumentation_register["responses"].get(fir_id)
         if stage_element is None:
             msg = ("fir response not in inventory: %s, stopping correction"
                    "before stage %i") % (fir_id, stage)
@@ -671,27 +715,19 @@ def _read_response_stage(stage, _ns, rate, stage_sequence_number, input_units,
     # Since 0.10 ResponsePAZ can have a decimation attributes
     if output_units != "V":
 
-        # Get element or default value
-        decimation["factor"] = _tag2obj(stage, _ns("decimationFactor"),
-                                        int) or 1
-        decimation["delay"] = _tag2obj(stage, _ns("delay"), float) or 0
-        decimation["correction"] = _tag2obj(stage, _ns("correction"),
-                                            float) or 0
-        decimation["offset"] = _tag2obj(stage, _ns("offset"), float) or 0
-        decimation["rate"] = _read_float_var(rate, Frequency)
+      # Get element or default value
+      decimation["factor"] = _tag2obj(stage, _ns("decimationFactor"), int) or 1
+      decimation["delay"] = _tag2obj(stage, _ns("delay"), float)  or 0
+      decimation["correction"] = _tag2obj(stage, _ns("correction"), float) or 0
+      decimation["offset"] = _tag2obj(stage, _ns("offset"), float) or 0
+      decimation["rate"] = _read_float_var(rate, Frequency)
 
     # Decimation delay/correction need to be normalized
     if rate != 0.0:
-        if decimation["delay"] is not None:
-            decimation["delay"] = _read_float_var(
-                                      decimation["delay"] / rate,
-                                      FloatWithUncertaintiesAndUnit,
-                                      unit=True)
-        if decimation["correction"] is not None:
-            decimation["correction"] = _read_float_var(
-                                           decimation["correction"] / rate,
-                                           FloatWithUncertaintiesAndUnit,
-                                           unit=True)
+      if decimation["delay"] is not None:
+        decimation["delay"] = _read_float_var(decimation["delay"] / rate, FloatWithUncertaintiesAndUnit, unit=True)
+      if decimation["correction"] is not None:
+        decimation["correction"] = _read_float_var(decimation["correction"] / rate, FloatWithUncertaintiesAndUnit, unit=True)
 
     # Set up list of for this stage arguments
     kwargs = {
@@ -730,8 +766,8 @@ def _read_response_stage(stage, _ns, rate, stage_sequence_number, input_units,
         # A: Laplace (rad)
         # B: Laplace (Hz)
         # D: digital (z-transform)
-        pz_type = _tag2obj(stage, _ns("type"), str)
-        pz_transfer_function_type = _map_transfer_type(pz_type)
+        pz_transfer_function_type = _tag2obj(stage, _ns("type"), str)
+        pz_transfer_function_type = _map_transfer_type(pz_transfer_function_type)
 
         # Parse string of poles and zeros
         # paz are stored as a string in sc3ml
@@ -739,21 +775,11 @@ def _read_response_stage(stage, _ns, rate, stage_sequence_number, input_units,
         zeros_array = stage.find(_ns("zeros")).text
         poles_array = stage.find(_ns("poles")).text
         if zeros_array is not None:
-<<<<<<< HEAD
             zeros_array = _parse_list_of_complex_string(zeros_array)
         else:
             zeros_array = []
         if poles_array is not None:
             poles_array = _parse_list_of_complex_string(poles_array)
-=======
-            zeros_array = re.findall(r'\(\s*([^,\s]+)\s*,\s*([^)\s]+)\s*\)',
-                                     zeros_array)
-        else:
-            zeros_array = []
-        if poles_array is not None:
-            poles_array = re.findall(r'\(\s*([^,\s]+)\s*,\s*([^)\s]+)\s*\)',
-                                     poles_array)
->>>>>>> Fix poles and zeros reading
         else:
             poles_array = []
 
@@ -777,8 +803,8 @@ def _read_response_stage(stage, _ns, rate, stage_sequence_number, input_units,
 
     # For IIR filters reuse the PolesZerosResponseStage
     elif(elem_type == 'responseIIR'):
-        pz_type = _tag2obj(stage, _ns("type"), str)
-        pz_transfer_function_type = _map_transfer_type(pz_type)
+        pz_transfer_function_type = _tag2obj(stage, _ns("type"), str)
+        pz_transfer_function_type = _map_transfer_type(pz_transfer_function_type)
 
         numerators = stage.find(_ns("numerators")).text.split(" ")
         denominators = stage.find(_ns("denominators")).text.split(" ")
@@ -790,7 +816,7 @@ def _read_response_stage(stage, _ns, rate, stage_sequence_number, input_units,
         # See #2004 @andres-h
         zeros, poles, gain = tf2zpk(numerators, denominators)
         msg = "ResponseIIR is not fully tested in ObsPy. Please be cautious"
-        warnings.warn(msg)
+	warnings.warn(msg)
 
         return PolesZerosResponseStage(
             pz_transfer_function_type=pz_transfer_function_type,
@@ -840,7 +866,7 @@ def _read_response_stage(stage, _ns, rate, stage_sequence_number, input_units,
         coeffs_str = _tag2obj(stage, _ns("coefficients"), str)
         coeffs_float = []
         if coeffs_str is not None and coeffs_str != 'None':
-            coeffs = coeffs_str.split()
+            coeffs = coeffs_str.split(" ")
             i = 0
             # pass additional mapping of coefficient counter
             # so that a proper stationXML can be formatted
@@ -867,29 +893,17 @@ def _read_response_stage(stage, _ns, rate, stage_sequence_number, input_units,
         return FIRResponseStage(
             coefficients=coeffs_float, symmetry=symmetry, **kwargs)
 
-    elif(elem_type == 'responseFAP'):
-
-        data = _tag2obj(stage, _ns("tuples"), str)
-        data = np.array(data.split(), dtype=np.float64)
-        freq, amp, phase = data.reshape((-1, 3)).T
-        elements = []
-        for freq_, amp_, phase_ in zip(freq, amp, phase):
-            elements.append(ResponseListElement(freq_, amp_, phase_))
-
-        return ResponseListResponseStage(
-            response_list_elements=elements, **kwargs)
-
 
 def _tag2pole_or_zero(paz_element, count):
 
     """
-    Parses sc3ml poles and zeros
+    Parses sc3ml paz format
     Uncertainties on poles removed, not present in sc3ml.xsd?
     Always put to None so no internal conflict
     The sanitization removes the first/last parenthesis
     and split by comma, real part is 1st, imaginary 2nd
 
-    :param paz_element: tuple of poles or zeros e.g. ('12320', '23020')
+    :param paz_element: string of poles or zeros e.g. (12320, 23020)
     """
 
     real, imag = map(float, paz_element)
